--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <script src="js/script.js"></script>
+  <link rel="icon" href="media/webicon.png">
   <meta charset="UTF-8">
   <meta name="author" content="David Pociño">
   <meta name="keywords" content="Typography, Books, Library, Buy books">
